--- a/index.html
+++ b/index.html
@@ -2,11 +2,17 @@
 <html>
 	<head>
 		<link rel="stylesheet" type="text/css" href="style.css">
+		<link href="https://fonts.googleapis.com/css?family=Montserrat|Open+Sans" rel="stylesheet">
 		<title>Ethan's Site</title>
 		<style>
 		</style>
 	</head>
 	<body>
-		<h1>Ethan's Site</h1>
+		<div class="headerbox">
+			
+			<div class="title">
+				<h1>Ethan's Site</h1>
+			</div>
+		</div>
 	</body>
 </html>
