--- a/index.html
+++ b/index.html
@@ -5,6 +5,29 @@
 		<link href="https://fonts.googleapis.com/css?family=Montserrat|Open+Sans" rel="stylesheet">
 		<title>Ethan's Site</title>
 		<style>
+			body {
+				font-family: "Montserrat", sans-serif;
+				color: #212121;
+				margin-left: 0px;
+				margin-right: 0px;
+				margin-top: 0px;
+				margin-bottom: 0px;
+			}
+			h1 {
+				margin-top: 0px;
+				margin-bottom: 0px;
+			}
+			.headerbox {
+				background-color: #5d8cd8;
+				width: 100%;
+				height: 100px;
+				color: white!important;
+			}
+			.title {
+				position: absolute;
+				left: 110px;
+				top: 30px;
+			}
 		</style>
 	</head>
 	<body>
