--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 		<div class="headerbox">
 			
 			<div class="title">
-				<h1>Ethan's Site</h1>
+				<h1>Ethan Konrad</h1>
 			</div>
 		</div>
 		<div class="content">
