--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
+		<link rel="icon" href="icon.png">
 		<link rel="stylesheet" type="text/css" href="style.css">
 		<link href="https://fonts.googleapis.com/css?family=Montserrat|Open+Sans" rel="stylesheet">
 			<title>Ethan Konrad</title>
@@ -9,7 +10,6 @@
 	</head>
 	<body>
 		<div class="headerbox">
-			
 			<div class="title">
 				<h1>Ethan Konrad</h1>
 			</div>
