--- a/index.html
+++ b/index.html
@@ -6,30 +6,52 @@
 		<link href="https://fonts.googleapis.com/css?family=Montserrat|Open+Sans" rel="stylesheet">
 			<title>Ethan Konrad</title>
 		<style>
+			
 		</style>
 	</head>
 	<body>
 		<div class="headerbox">
-			<div class="title">
-				<h1>Ethan Konrad</h1>
+			<div class="dropdown">
+  				<button class="dropbtn">Menu</button>
+  				<div class="dropdown-content">
+    					<a href="#">Home</a>
+					<div class="dropdown2">
+    						<button class="dropbtn2"><a href="#">Personal Projects</a></button>
+						<div class="dropdown-content2">
+							<a href="#">Websites</a>
+							<a href="#">Python</a>
+						</div>
+    					<a href="#">School</a>
+  					</div>
+				</div>
 			</div>
+		<div class="title">
+			<h1>Ethan Konrad</h1>
 		</div>
 		<div class="content">
 			<div class="whitebox">
-				<h2>Lorem ipsum</h2>
-				<p style="margin-right: 400px; margin-left: 400px;">Lorem ipsum dolor sit amet, consectetur adipiscing elit. In et dolor facilisis, ultricies lacus id, fermentum felis. Vivamus vel arcu sed turpis sollicitudin viverra. Pellentesque luctus sodales lacus sit amet placerat. Fusce quis erat id dolor auctor hendrerit ut sed magna. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Vivamus pharetra nec justo ac elementum. Morbi ornare id risus in hendrerit.</p>
+				<h2>About me</h2>
+				<div class="paragraphs">
+					<p>I'm a 17 year old boy from New Hampshire with a passion for coding. Ever since I first started in middle school I've been exploring different areas of the field and making programs mostly as a hobby.<br> Currently I am fluent in:<br><br>> HTML<br>> CSS<br>> Python<br>> And plan on learning C++ as part of my senior project.<br><br>What I believe makes me so proficient in programming is my ability to problem solve. I think out of the box and create programs that are beyond expectations.</p>
+				</div>
 			</div>
 			<div class="skybluebox">
-				<h2>Lorem ipsum</h2>
-				<p style="margin-right: 400px; margin-left: 400px;">Lorem ipsum dolor sit amet, consectetur adipiscing elit. In et dolor facilisis, ultricies lacus id, fermentum felis. Vivamus vel arcu sed turpis sollicitudin viverra. Pellentesque luctus sodales lacus sit amet placerat. Fusce quis erat id dolor auctor hendrerit ut sed magna. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Vivamus pharetra nec justo ac elementum. Morbi ornare id risus in hendrerit.</p>
+				<h2>My Personal Projects</h2>
+				<div class="paragraphs">
+					<p>I first started out by learning HTML and CSS. I played around with it for a while before finally I made my mother a blog that she never used. After that I started making actual sites this one included.<br>Here are some demo sites and the blog I made.<br><br><a href="" class="links">Websites</a><br><br>My sophmore year of Highschool I took computer programming and learned Python. I loved the language and the class so much I earned an "<i>Academic Award of Excellence</i>" for the class.<br>After that class I continued learning and creating programs in Python for fun and here are a few<br><br><a href="#" class="links">Python</a></p>
+				</div>
 			</div>
 			<div class="lightgreybox">
-				<h2>Lorem ipsum</h2>
-				<p style="margin-right: 400px; margin-left: 400px;">Lorem ipsum dolor sit amet, consectetur adipiscing elit. In et dolor facilisis, ultricies lacus id, fermentum felis. Vivamus vel arcu sed turpis sollicitudin viverra. Pellentesque luctus sodales lacus sit amet placerat. Fusce quis erat id dolor auctor hendrerit ut sed magna. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Vivamus pharetra nec justo ac elementum. Morbi ornare id risus in hendrerit.</p>
+				<h2>What I've done in School</h2>
+				<div class="paragraphs">
+					<p>During my Junior and Senior year of highschool I vistied CRTC everyday to take a computer engineering class. <br>Here is the work I completed in class.<br><br><a class="links2" href="#">CRTC</a></p>
+				</div>
 			</div>
 			<div class="bluebox">
 				<h2>Lorem ipsum</h2>
-				<p style="margin-right: 400px; margin-left: 400px;">Lorem ipsum dolor sit amet, consectetur adipiscing elit. In et dolor facilisis, ultricies lacus id, fermentum felis. Vivamus vel arcu sed turpis sollicitudin viverra. Pellentesque luctus sodales lacus sit amet placerat. Fusce quis erat id dolor auctor hendrerit ut sed magna. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Vivamus pharetra nec justo ac elementum. Morbi ornare id risus in hendrerit.</p>
+				<div class="paragraphs">
+					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In et dolor facilisis, ultricies lacus id, fermentum felis. Vivamus vel arcu sed turpis sollicitudin viverra. Pellentesque luctus sodales lacus sit amet placerat. Fusce quis erat id dolor auctor hendrerit ut sed magna. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Vivamus pharetra nec justo ac elementum. Morbi ornare id risus in hendrerit.</p>
+				</div>
 			</div>
 		</div>
 	</body>
