--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html>
 	<head>
@@ -44,7 +45,7 @@
 			<div class="lightgreybox">
 				<h2>What I've done in School</h2>
 				<div class="paragraphs">
-					<p>During my Junior and Senior year of highschool I vistied CRTC everyday to take a computer engineering class. <br>Here is the work I completed in class.<br><br><a class="links2" href="#">CRTC</a></p>
+					<p>During my Junior and Senior year of highschool I visited CRTC everyday to take a computer engineering class. <br>Here is the work I completed in class.<br><br><a class="links2" href="#">CRTC</a></p>
 				</div>
 			</div>
 			<div class="bluebox">
