--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
 
-
 <!DOCTYPE html>
 <html>
 	<head>
@@ -8,27 +7,27 @@
 		<link href="https://fonts.googleapis.com/css?family=Montserrat|Open+Sans" rel="stylesheet">
 			<title>Ethan Konrad</title>
 		<style>
-			
 		</style>
 	</head>
 	<body>
 		<div class="headerbox">
 			<div class="dropdown">
-  				<button class="dropbtn">Menu</button>
-  				<div class="dropdown-content">
-    					<a href="#">Home</a>
+				<button class="dropbtn">Menu</button>
+				<div class="dropdown-content">
+					<a href="#">Home</a>
 					<div class="dropdown2">
-    						<button class="dropbtn2"><a href="#">Personal Projects</a></button>
+							<button class="dropbtn2"><a href="#">Personal Projects</a></button>
 						<div class="dropdown-content2">
-							<a href="#">Websites</a>
-							<a href="#">Python</a>
+							<a href="#" class="index">Websites</a>
+							<a href="#"class="index">Python</a>
 						</div>
-    					<a href="#">School</a>
-  					</div>
+					</div>
+					<a href="#">School</a>
 				</div>
 			</div>
 		<div class="title">
 			<h1>Ethan Konrad</h1>
+		</div>
 		</div>
 		<div class="content">
 			<div class="parallax"></div>
