--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 
+
 <!DOCTYPE html>
 <html>
 	<head>
@@ -14,7 +15,7 @@
 			<div class="dropdown">
 				<button class="dropbtn">Menu</button>
 				<div class="dropdown-content">
-					<a href="#">Home</a>
+					<a href="index.html">Home</a>
 					<div class="dropdown2">
 							<button class="dropbtn2"><a href="#">Personal Projects</a></button>
 						<div class="dropdown-content2">
@@ -22,7 +23,7 @@
 							<a href="#"class="index">Python</a>
 						</div>
 					</div>
-					<a href="#">School</a>
+					<a href="crtc.htm" target="_blank">School</a>
 				</div>
 			</div>
 		<div class="title">
@@ -48,7 +49,7 @@
 			<div class="whitebox">
 				<h2>What I've done in School</h2>
 				<div class="paragraphs">
-					<p>During my Junior and Senior year of highschool I visited CRTC everyday to take a computer engineering class. <br>Here is the work I completed in class.<br><br><a class="links2" href="#">CRTC</a></p>
+					<p>During my Junior and Senior year of highschool I visited CRTC everyday to take a computer engineering class. <br>Here is the work I completed in class.<br><br><a class="links2" href="crtc.htm" target="_blank">CRTC</a></p>
 				</div>
 			</div>
 			<div class="parallax4"></div>
