--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 							<a href="#"class="index">Python</a>
 						</div>
 					</div>
-					<a href="crtc.html" target="_blank">School</a>
+					<a href="crtc.html">School</a>
 				</div>
 			</div>
 		<div class="title">
@@ -53,7 +53,7 @@
 			</div>
 			<div class="parallax4"></div>
 			<div class="whitebox">
-				<h2>Lorem ipsum</h2>
+				<h2>Coming Soon</h2>
 				<div class="paragraphs">
 					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In et dolor facilisis, ultricies lacus id, fermentum felis. Vivamus vel arcu sed turpis sollicitudin viverra. Pellentesque luctus sodales lacus sit amet placerat. Fusce quis erat id dolor auctor hendrerit ut sed magna. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Vivamus pharetra nec justo ac elementum. Morbi ornare id risus in hendrerit.</p>
 				</div>
