--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 			<div class="whitebox">
 				<h2>What I've done in School</h2>
 				<div class="paragraphs">
-					<p>During my Junior and Senior year of highschool I visited CRTC everyday to take a computer engineering class. <br>Here is the work I completed in class.<br><br><a class="links2" href="crtc.html" target="_blank">CRTC</a></p>
+					<p>During my Junior and Senior year of highschool I visited CRTC everyday to take a computer engineering class. <br>Here is the work I completed in class.<br><br><a class="links2" href="crtc.html">CRTC</a></p>
 				</div>
 			</div>
 			<div class="parallax4"></div>
