--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 							<button class="dropbtn2"><a href="#">Personal Projects</a></button>
 						<div class="dropdown-content2">
 							<a href="#" class="index">Websites</a>
-							<a href="#"class="index">Python</a>
+							<a href="python.html"class="index">Python</a>
 						</div>
 					</div>
 					<a href="crtc.html">School</a>
@@ -34,14 +34,14 @@
 			<div class="whitebox">
 				<h2>About me</h2>
 				<div class="paragraphs">
-					<p>I'm a 17 year old boy from New Hampshire with a passion for coding. Ever since I first started in middle school I've been exploring different areas of the field and making programs mostly as a hobby.<br> Currently I am fluent in:<br><br>> HTML<br>> CSS<br>> Python<br>> And plan on learning C++ as part of my senior project.<br><br>What I believe makes me so proficient in programming is my ability to problem solve. I think out of the box and create programs that are beyond expectations.</p>
+					<p>I'm a 17 year old from New Hampshire with a passion for coding. Ever since I first started in middle school I've been exploring different areas of the field and making programs mostly as a hobby.<br> Currently I am fluent in:<br><br>> HTML<br>> CSS<br>> Python<br>> And plan on learning C++ as part of my senior project.<br><br>What I believe makes me so proficient in programming is my ability to problem solve. I think out of the box and create programs that are beyond expectations.</p>
 				</div>
 			</div>
 			<div class="parallax2"></div>
 			<div class="whitebox">
 				<h2>My Personal Projects</h2>
 				<div class="paragraphs">
-					<p>I first started out by learning HTML and CSS. I played around with it for a while before finally I made my mother a blog that she never used. After that I started making actual sites this one included.<br>Here are some demo sites and the blog I made.<br><br><a href="" class="links2">Websites</a><br><br>My sophmore year of Highschool I took computer programming and learned Python. I loved the language and the class so much I earned an "<i>Academic Award of Excellence</i>" for the class.<br>After that class I continued learning and creating programs in Python for fun and here are a few<br><br><a href="#" class="links2">Python</a></p>
+					<p>I first started out by learning HTML and CSS. I played around with it for a while before finally I made my mother a blog that she never used. After that I started making actual sites this one included.<br>Here are some demo sites and the blog I made.<br><br><a href="" class="links2">Websites</a><br><br>My sophmore year of Highschool I took computer programming and learned Python. I loved the language and the class so much I earned an "<i>Academic Award of Excellence</i>" for the class.<br>After that class I continued learning and creating programs in Python for fun and here are a few<br><br><a href="python.html" class="links2">Python</a></p>
 				</div>
 			</div>
 			<div class="parallax3"></div>
