--- a/crtc.html
+++ b/crtc.html
@@ -19,7 +19,7 @@
 							<button class="dropbtn2"><a href="#">Personal Projects</a></button>
 						<div class="dropdown-content2">
 							<a href="#" class="index">Websites</a>
-							<a href="#"class="index">Python</a>
+							<a href="python.html"class="index">Python</a>
 						</div>
 					</div>
 					<a href="crtc.html">School</a>
