--- a/index.html
+++ b/index.html
@@ -48,14 +48,14 @@
 			<div class="whitebox">
 				<h2>What I've done in School</h2>
 				<div class="paragraphs">
-					<p>During my Junior and Senior year of highschool I visited CRTC everyday to take a computer engineering class. <br>Here is the work I completed in class.<br><br><a class="links2" href="crtc.html">CRTC</a></p>
+					<p>During my Junior and Senior year of highschool I visited CRTC everyday to take a computer engineering class. <br>Here is the work I completed in class.<br><br><a class="links2" href="crtc.html">CRTC</a></p><br><br>
+					<p>During my Senior year I took Principals of Engineering.<br>Here is the work I completed in that class.<br><br><a class="links2" href="#">PoE</a></p>
 				</div>
 			</div>
 			<div class="parallax4"></div>
 			<div class="whitebox">
-				<h2>Coming Soon</h2>
+				<h2>Senior Project Logs(Coming Soon)</h2>
 				<div class="paragraphs">
-					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In et dolor facilisis, ultricies lacus id, fermentum felis. Vivamus vel arcu sed turpis sollicitudin viverra. Pellentesque luctus sodales lacus sit amet placerat. Fusce quis erat id dolor auctor hendrerit ut sed magna. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Vivamus pharetra nec justo ac elementum. Morbi ornare id risus in hendrerit.</p>
 				</div>
 			</div>
 		</div>
