--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 							<a href="python.html"class="index">Python</a>
 						</div>
 					</div>
-					<a href="crtc.html">School</a>
+					<a href="myths.html">Myths</a>
 				</div>
 			</div>
 		<div class="title">
